--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>國中自修良師</title>
+  <link type="text/css" rel="stylesheet" href="https://www.ehanlin.com.tw/lesscss/ehanlin-basicss.css" />
   <link type="text/css" rel="stylesheet" href="./css/event_jhsep106.css" />
 </head>
 
